--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "devDependencies": {
     "@apollo/client": "^3.3.16",
     "@boomfly/svelte-apollo": "^0.4.0",
+    "@graphql-codegen/cli": "1.21.4",
+    "@graphql-codegen/introspection": "1.18.2",
+    "@graphql-codegen/typescript": "1.22.0",
     "@popperjs/core": "^2.9.2",
     "@tsconfig/svelte": "^1.0.10",
     "@types/node": "^14.11.1",
@@ -27,6 +30,7 @@
     "svelte-preprocess": "^4.3.0",
     "svelte-rx": "0.0.7",
     "svelte-simple-modal": "^0.10.1",
+    "svelte-typewriter": "^2.4.5",
     "ts-loader": "^8.0.4",
     "tslib": "^2.0.1",
     "typescript": "^4.0.3",
@@ -37,7 +41,8 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack",
     "dev": "webpack serve --content-base public",
-    "validate": "svelte-check"
+    "validate": "svelte-check",
+    "gen-types": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
     "svelte-spa-router": "^3.1.0"
