--- a/package.json
+++ b/package.json
@@ -3,14 +3,20 @@
   "version": "1.0.0",
   "devDependencies": {
     "@apollo/client": "^3.3.16",
+    "@babel/core": "^7.14.0",
+    "@babel/preset-env": "^7.14.0",
     "@boomfly/svelte-apollo": "^0.4.0",
     "@graphql-codegen/cli": "1.21.4",
     "@graphql-codegen/introspection": "1.18.2",
     "@graphql-codegen/typescript": "1.22.0",
     "@popperjs/core": "^2.9.2",
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/svelte": "^3.0.3",
     "@tsconfig/svelte": "^1.0.10",
+    "@types/jest": "^26.0.23",
     "@types/node": "^14.11.1",
     "axios": "^0.21.1",
+    "babel-jest": "^26.6.3",
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.1",
     "debounce": "^1.2.1",
@@ -18,6 +24,7 @@
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
     "graphql-tag": "^2.12.4",
+    "jest": "^26.6.3",
     "mini-css-extract-plugin": "^1.3.4",
     "prettier": "^2.2.1",
     "prettier-plugin-svelte": "^2.2.0",
@@ -25,12 +32,14 @@
     "svelte": "^3.31.2",
     "svelte-apollo": "^0.4.0",
     "svelte-check": "^1.0.46",
+    "svelte-jester": "^1.5.0",
     "svelte-loader": "^3.0.0",
     "svelte-popover": "^2.0.8",
     "svelte-preprocess": "^4.3.0",
     "svelte-rx": "0.0.7",
     "svelte-simple-modal": "^0.10.1",
     "svelte-typewriter": "^2.4.5",
+    "ts-jest": "^26.5.5",
     "ts-loader": "^8.0.4",
     "tslib": "^2.0.1",
     "typescript": "^4.0.3",
@@ -42,6 +51,8 @@
     "build": "cross-env NODE_ENV=production webpack",
     "dev": "webpack serve --content-base public",
     "validate": "svelte-check",
+    "test": "jest",
+    "test:watch": "npm test -- --watch",
     "gen-types": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
