--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
      */
     "sourceMap": true,
     /** Requests the runtime types from the svelte modules by default. Needed for TS files or else you get errors. */
-    "types": ["svelte", "node"],
+    "types": ["svelte", "node", "jest"],
 
     "strict": false,
     "esModuleInterop": true,
