--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "graphql-request": "^3.4.0",
     "graphql-tag": "^2.12.4",
     "jest": "^26.6.3",
+    "lodash-es": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "mini-css-extract-plugin": "^1.3.4",
     "prettier": "^2.2.1",
     "prettier-plugin-svelte": "^2.2.0",
@@ -56,6 +58,7 @@
     "gen-types": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
+    "normalize.css": "^8.0.1",
     "svelte-spa-router": "^3.1.0"
   }
 }
